--- a/01index.html
+++ b/01index.html
@@ -1,1 +1,30 @@
+<html>
+<head>
+<title>Proyecto_Equipo_2</title>
+<link rel="stylesheet" href="Inicio.css">
+</head>
+<body>
+<nav class="navMenu ; sombreado">
+      <a href="#">Inicio</a>
+      <a href="#">Historia</a>
+	  <a href="#">Etapas</a>
+      <a href="#">Noticias</a>
+      <a href="#">Críticas</a>
+      <a href="#">Tienda</a>
+      <div class="dot"></div>
+    </nav>
+<div id="wrapper">
+  
+  <p id="stars"><span>&#9733;</span><span>&#9733;</span><span>&#9733;</span><span>&#9733;</span><span>&#9733;</span></p>
+  <p id="title" contenteditable="true" spellcheck="false"><span>Archivo</span><span> Beksiński</span></p>
+  <p id="slogan"><span>Proyecto</span> Equipo <span>2</span>.</p>
+  </div>
+
+
+
+
+</body>
+</html>
+ 
+
 
