--- a/tienda_index.html
+++ b/tienda_index.html
@@ -13,12 +13,13 @@
 <table>
 <tr class="nav">
 <nav class="navMenu ; sombreado">
-		<a href="index.html">Inicio</a>
-		<a href="biografia.html">Historia</a>
-		<a href="#">Etapas</a>
-		<a href="noticias.html">Noticias</a>
-		<a href="criticas.html">Críticas</a>
-		<a href="tienda.html">Tienda</a>
+	<a href="index.html">Inicio</a>
+	<a href="biografia.html">Historia</a>
+	<a href="Museo.html">Museos</a>
+	<a href="noticias.html">Noticias</a>
+	<a href="criticas.html">Críticas</a>
+	<a href="galeria.html">Galeria</a>
+	<a href="tienda_index.html">Tienda</a>
 
 		<div class="dot"></div>
 </nav>
